welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: Boolean does not take parameters
    else ( day == 6 || day ==0 ) {
                                 ^alarmClock:16: error: Boolean does not take parameters
    else ( day == 6 || day ==0 ) {
                                 ^